feat: finish swagger for chat-api

--- a/chat-api/.env
+++ b/chat-api/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb://mongo:123@localhost:27017/chat-api?authSource=admin"
-JWT_SECRET="gb$7z_cPgcwC_??h"
-CLOUDINARY_NAME="dpb3a5byc"
-CLOUDINARY_API_KEY="457512997331441"
-CLOUDINARY_API_SECRET="eUSf0Yya-BRDBhAh1bsAnqJkI2w"
+JWT_SECRET="supersecret"
+CLOUDINARY_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
