--- a/chat-api/package.json
+++ b/chat-api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.3",
+    "@nestjs/swagger": "^7.3.0",
     "@nestjs/websockets": "^10.3.3",
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
