feat: finish swagger for chat-gateway

--- a/chat-gateway/.env
+++ b/chat-gateway/.env
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb://mongo:123@localhost:27017/chat-api?authSource=admin"
-JWT_SECRET="gb$7z_cPgcwC_??h"
+JWT_SECRET="supersecret"
